<resources>
    <string name="app_name">ApplicationDM</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nouveau_nom">Nouveau Nom</string>
    <string name="ajouter">Ajouter</string>
    <string name="_112">112</string>
    <string name="infos">Infos</string>
    <string name="informations">Informations</string>
    <string name="danger">DANGER</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="carnet_de_contacts">Carnet de contacts</string>
    <string name="contacts">Contacts</string>
    <string name="nom">NOM</string>
    <string name="pr_nom">Prénom</string>
    <string name="ge">Âge</string>
    <string name="mot_de_passe_min_6_caract_res">Mot de passe (Min. 6 caractères)</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="vider_contacts">Vider Contacts</string>
    <string name="coucou">Coucou</string>
    <string name="pour_une_vie_plus_s_re">Pour une vie plus sûre</string>
    <string name="e_mail">E-Mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="textview1">textView1</string>
    <string name="textview2">textview2</string>
    <string name="todo">TODO</string>
    <string name="exemple_email_com">exemple@email.com</string>
    <string name="min_6_caract_res">Min. 6 caractères</string>
    <string name="title_activity_display_position_maps">DisplayPositionMaps</string>
    <string name="cr_ateurs">Créateurs</string>
    <string name="thomas_moser_n_nronan_riboulet_n_ncristina_andres_serra">Thomas Moser\n\nRonan Riboulet\n\nCristina Andres Serra</string>
    <string name="haute_cole_arc_n_nclaudio_cortinovis_n_ngoogle">Haute-École ARC\n\nClaudio Cortinovis</string>
    <string name="neuch_tel_n_nenseignant_he_arc_n_nservices_propos_s">Neuchâtel\n\nEnseignant HE-ARC</string>
    <string name="merci_aux_diff_rentes_familles_ayant_accept_de_tester_l_application_n_n_merci_galement_aux_amis_pour_leurs_conseils_et_leur_soutien">Merci aux différentes familles ayant accepté de tester l’application!\n\n Merci également aux amis pour leurs conseils et leur soutien!</string>
    <string name="stop_violence_2021">©Stop\'Violence, 2021</string>
    <string name="carte">Carte</string>
    <string name="un_seul_compte_nplusieurs_appareils">Un seul compte \nPlusieurs appareils</string>
    <string name="une_liste_de_contacts_synchronis_e_entre_les_appareils">Une liste de contacts synchronisée entre les appareils</string>
</resources>