<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/font_nouveau_contact"
    android:orientation="vertical"
    tools:context=".NewAccount">

    <LinearLayout
        android:id="@+id/relative_layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:paddingBottom="0dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/newaccount_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#926aa6"
                    android:minHeight="?attr/actionBarSize"
                    android:paddingStart="50sp"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="Nouveau Compte"
                    app:titleTextColor="#ffff"
                    tools:ignore="RtlSymmetry" />

                <!-- Right most ImageView -->
                <ImageButton
                    android:id="@+id/newaccount_image_backbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="#926aa6"
                    android:contentDescription="@string/todo"
                    android:minWidth="32dp"
                    android:paddingStart="5dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/newaccount_toolbar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                    tools:ignore="RtlSymmetry" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <EditText
            android:id="@+id/newaccount_edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"


            android:background="@drawable/edittext_bg_new_account"
            android:hint="@string/nom"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#4f4f4f"
            android:textColorHint="#C0C0C0"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/newaccount_edittext_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newaccount_edittext_name"
            android:layout_marginTop="15sp"
            android:background="@drawable/edittext_bg_new_account"
            android:hint="@string/pr_nom"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#4f4f4f"

            android:textColorHint="#C0C0C0C0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_chainStyle="spread" />

        <EditText
            android:id="@+id/newaccount_edittext_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newaccount_edittext_prenom"
            android:layout_marginTop="15sp"
            android:background="@drawable/edittext_bg_new_account"
            android:hint="@string/ge"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#4f4f4f"
            android:textColorHint="#C0C0C0C0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread" />

        <EditText
            android:id="@+id/newaccount_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newaccount_edittext_age"
            android:layout_marginTop="15sp"
            android:background="@drawable/edittext_bg_new_account"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#4f4f4f"
            android:textColorHint="#C0C0C0C0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread" />

        <EditText
            android:id="@+id/newaccount_edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newaccount_edittext_email"
            android:layout_marginTop="15sp"
            android:background="@drawable/edittext_bg_new_account"
            android:hint="@string/mot_de_passe_min_6_caract_res"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#4f4f4f"
            android:textColorHint="#C0C0C0C0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread" />

        <EditText
            android:id="@+id/newaccount_edittext_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newaccount_edittext_password"
            android:layout_marginTop="15sp"
            android:background="@drawable/edittext_bg_new_account"
            android:hint="@string/num_ro_de_t_l_phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="#4f4f4f"
            android:textColorHint="#C0C0C0C0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread" />

        <Button
            android:id="@+id/newaccount_button_enregistrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newaccount_edittext_phone"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="201dp"
            android:background="#926aa6"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/s_inscrire"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />


    </RelativeLayout>
</LinearLayout>