<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".PopUpNewActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_person_add_24"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newcontact_edittext_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/nom"
        android:paddingStart="16dp"
        android:textColor="#401451"
        android:textSize="23dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/newcontact_edittext_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_local_phone_24_purple"
        android:hint="@string/num_ro_de_t_l_phone"
        android:paddingStart="16dp"
        android:inputType="phone"
        android:textColor="#401451"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newcontact_edittext_nom" />

    <TextView
        android:id="@+id/newcontact_textview_ajouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/ajouter"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newcontact_edittext_phone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newcontact_imagebutton_ajouter"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="31dp"
        android:backgroundTint="#401451"
        android:layout_marginEnd="50dp"
        android:src="@drawable/forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newcontact_edittext_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>