<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/font_credits"
    tools:context=".Credits">
    <TextView
        android:id="@+id/credits_credits_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Crédits"
        android:textAlignment="center"
        android:textColor="#926aa6"
        android:textSize="40sp"
        android:textStyle="italic|bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/credits_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credits_credits_edittext"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/credits_createurs_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/cr_ateurs"
            android:textColor="#926aa6"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/credits_linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/credits_createurs_textview">

            <TextView
                android:id="@+id/credits_noms_textview"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="50"
                android:maxLines="5"
                android:text="@string/thomas_moser_n_nronan_riboulet_n_ncristina_andres_serra"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/credits_roles_textview"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="50"

                android:maxLines="5"
                android:paddingStart="10dp"
                android:text="design logiciel\n\ndesign logiciel\n\ndesign graphique"
                android:textSize="20sp"
                android:textStyle="italic|bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/credits_createurs_textview" />
        </LinearLayout>

        <TextView
            android:id="@+id/credits_remerciements_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:text="Remerciements"
            android:textColor="#926aa6"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/credits_linear1" />

        <LinearLayout
            android:id="@+id/credits_linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/credits_remerciements_textview">

            <TextView
                android:id="@+id/credits_noms2_textview"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="50"
                android:lines="6"
                android:text="@string/haute_cole_arc_n_nclaudio_cortinovis_n_ngoogle"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/credits_roles2_textview"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="50"
                android:lines="6"
                android:paddingStart="10dp"

                android:text="@string/neuch_tel_n_nenseignant_he_arc_n_nservices_propos_s"
                android:textSize="20sp"
                android:textStyle="italic|bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/credits_createurs_textview" />

        </LinearLayout>


        <TextView
            android:id="@+id/credits_merci_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/merci_aux_diff_rentes_familles_ayant_accept_de_tester_l_application_n_n_merci_galement_aux_amis_pour_leurs_conseils_et_leur_soutien"
            android:textColor="#926aa6"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/credits_linear2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/stop_violence_2021"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>